examples/grpc-bridge/server/envoy-proxy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8811
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: backend_grpc_service
          http_filters:
          - name: envoy.filters.http.router
    socket_options:
      - level: 1
        name: 9
        int_value: 1
        state: STATE_LISTENING
      - level: 6
        name: 4
        int_value: 20
        state: STATE_LISTENING
      - level: 6
        name: 5
        int_value: 20
        state: STATE_LISTENING
      - level: 6
        name: 6
        int_value: 5
        state: STATE_LISTENING
  clusters:
  - name: backend_grpc_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 0.5s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: backend_grpc_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: kv-backend-service
                port_value: 8081
